# rust-cli-serve

./: .gitignore  Cargo.toml  pnpm-lock.yaml
src/: error.rs  jwt.rs  lib.rs  main.rs  server.rs
src/db/: mod.rs
src/template/: controller.rs  mod.rs  server.rs
src/user/: controller.rs  mod.rs  server.rs
web/: Cargo.toml  index.html  tailwind.config.js
web/src/: lib.rs  main.rs  router.rs
web/src/page/: Home.rs  Login.rs  mod.rs
