[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
chrono = "0.4.26"
futures = "0.3.28"
httpc-test = "0.1.5"
mongodb = { version = "2.6.1", features = ["tracing"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
anyhow = "1.0.75"
