[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "multipart"] }
bcrypt = "0.15.0"
bson = "2.6.1"
chrono = "0.4.26"
futures = "0.3.28"
httpc-test = "0.1.5"
jsonwebtoken = "8.3.0"
md5 = "0.7.0"
mongodb = { version = "2.6.1", features = ["tracing"] }
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
anyhow = "1.0.75"

[workspace]
members = ["web"]
